--- a/Debug/makefile
+++ b/Debug/makefile
@@ -66,7 +66,7 @@ main-build: scanline-fill.elf secondary-outputs
 
 # Tool invocations
 scanline-fill.elf: $(OBJS) $(USER_OBJS) D:\Studii\Magisterski\Kod_Optimizacii\Proekti\scanline-fill\STM32F411CEUX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "scanline-fill.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Studii\Magisterski\Kod_Optimizacii\Proekti\scanline-fill\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="scanline-fill.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "scanline-fill.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"D:\Studii\Magisterski\Kod_Optimizacii\Proekti\scanline-fill\STM32F411CEUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="scanline-fill.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
